# practica_glsl

./: CMakeLists.txt  README.md
libs/glad/: CMakeLists.txt  glad.c  glad.h
src/: render_loop.cpp
src/resources/: rectangle.cpp  triangle.cpp
